--- a/requirements.txt
+++ b/requirements.txt
@@ -31,5 +31,6 @@ tf-playwright-stealth==1.1.2
 typing_extensions==4.13.0
 tzdata==2025.2
 urllib3==2.3.0
-pip install pygsheets
+pygsheets==2.0.5
+
 
