--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -1,28 +1,30 @@
-name: Run Python Script Every Hour
+name: Update Data Every 2 Hours
 
 on:
   schedule:
-    - cron: '0 * * * *'  # This runs the script every hour at minute 0
-  workflow_dispatch:  # This allows you to manually trigger the workflow from the GitHub UI
+    - cron: "0 */2 * * *"  # Runs every 2 hours
+  workflow_dispatch:
 
 jobs:
-  run-python-script:
+  update-data:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set up Python 3.x
+      - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x'  # You can specify the exact version of Python here
+          python-version: '3.x'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt  # Make sure you have a requirements.txt for dependencies
+          pip install -r requirements.txt
 
-      - name: Run the Python script
-        run: |
-          python run_all.py  # Replace with the name of your Python script
+      - name: Run Python script
+        env:
+          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+        run: python run_all.py
+
