--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -1,30 +1,39 @@
-name: Update Data Every 2 Hours
+name: Run Scrapers Hourly
 
 on:
   schedule:
-    - cron: "0 */2 * * *"  # Runs every 2 hours
-  workflow_dispatch:
+    - cron: '0 * * * *'  # Runs at the start of every hour
+  workflow_dispatch:  # Allows manual triggering
 
 jobs:
-  update-data:
+  run-scrapers:
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Run Python script
-        env:
-          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
-        run: python run_all.py
-
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+        
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        playwright install
+        playwright install-deps
+        
+    - name: Run scrapers
+      run: |
+        cd scripts
+        python run.py
+        
+    - name: Commit and push changes
+      run: |
+        git config --global user.name "GitHub Actions"
+        git config --global user.email "actions@github.com"
+        git add .
+        git commit -m "Update scraped data - $(date)"
+        git push
