--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -26,6 +26,8 @@ jobs:
         playwright install-deps
         
     - name: Run scrapers
+      env:
+        GOOGLE_SERVICE_ACCOUNT_JSON: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_JSON }}
       run: |
         python run.py
         
