--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -2,7 +2,7 @@ name: Run Scrapers Hourly
 
 on:
   schedule:
-    - cron: '0 * * * *'  # Runs at the start of every hour
+    - cron: '* * * * *'  # Runs at the start of every hour
   workflow_dispatch:  # Allows manual triggering
 
 jobs:
