--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -1,40 +1,33 @@
-name: Run Scrapers Hourly
+name: Run scraper every hour
 
 on:
   schedule:
-    - cron: '* * * * *'  # Runs at the start of every hour
-  workflow_dispatch:  # Allows manual triggering
+    - cron: '0 * * * *'  # Every hour
+  workflow_dispatch:     # Allow manual trigger too
 
 jobs:
-  run-scrapers:
+  run-scraper:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-      
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
-        
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        playwright install
-        playwright install-deps
-        
-    - name: Run scrapers
-      env:
-        GOOGLE_SERVICE_ACCOUNT_JSON: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_JSON }}
-      run: |
-        python run.py
-        
-    - name: Commit and push changes
-      run: |
-        git config --global user.name "GitHub Actions"
-        git config --global user.email "actions@github.com"
-        git add .
-        git commit -m "Update scraped data - $(date)"
-        git push
+      - name: 📥 Checkout repository
+        uses: actions/checkout@v3
+
+      - name: 🐍 Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: 📦 Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install playwright gspread oauth2client playwright-stealth
+          playwright install chromium
+
+      - name: 🔐 Set up credentials
+        run: |
+          echo '${{ secrets.GSHEET_KEY }}' > pags-429207-03ef3b521109.json
+
+      - name: 🚀 Run Python script
+        run: python run.py
+
