--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -29,5 +29,5 @@ jobs:
           echo '${{ secrets.GSHEET_KEY }}' > pags-429207-03ef3b521109.json
 
       - name: 🚀 Run Python script
-        run: python run.py
+        run: python run_all.py
 
