--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -27,6 +27,9 @@ jobs:
       - name: 🔐 Set up credentials
         run: |
           echo '${{ secrets.GSHEET_KEY }}' > pags-429207-03ef3b521109.json
+      - name: 🔐 Set GOOGLE_SERVICE_ACCOUNT_JSON as env variable
+        run: echo "GOOGLE_SERVICE_ACCOUNT_JSON=${{ secrets.GOOGLE_SERVICE_ACCOUNT_JSON_ }}" >> $GITHUB_ENV
+
 
       - name: 🚀 Run Python script
         run: python run_all.py
