--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -24,8 +24,8 @@ jobs:
           pip install playwright gspread oauth2client playwright-stealth
           playwright install chromium
 
-      - name: 🔐 Export GOOGLE_SERVICE_ACCOUNT_JSON_ from secret
-        run: echo "GOOGLE_SERVICE_ACCOUNT_JSON=${{ secrets.GOOGLE_SERVICE_ACCOUNT_JSON_ }}" >> $GITHUB_ENV
+      - name: 🔐 Export GOOGLE from secret
+        run: echo "GOOGLE=${{ secrets.GOOGLE}}" >> $GITHUB_ENV
 
       - name: 🚀 Run Python script
         run: python run_all.py
