--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -1,13 +1,16 @@
-name: Run scraper every hour
+name: Google Sheets Auto Update
 
 on:
   schedule:
-    - cron: '0 * * * *'  # Every hour
-  workflow_dispatch:     # Allow manual trigger too
+    - cron: '*/5 * * * *'  # ⏱ Runs every 5 minutes
+  workflow_dispatch:        # Allows manual trigger from GitHub UI
 
 jobs:
-  run-scraper:
+  run-script:
     runs-on: ubuntu-latest
+
+    env:
+      sanjay: ${{ secrets.SANJAY }}
 
     steps:
       - name: 📥 Checkout repository
@@ -21,11 +24,8 @@ jobs:
       - name: 📦 Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install playwright gspread oauth2client playwright-stealth
-          playwright install chromium
+          pip install gspread oauth2client google-auth
 
-      - name: 🔐 Export GOOGLE from secret
-        run: echo "GOOGLE=${{ secrets.GOOGLE}}" >> $GITHUB_ENV
+      - name: 🚀 Run script
+        run: python run_all.py  # 🔄 Change to your actual script filename
 
-      - name: 🚀 Run Python script
-        run: python run_all.py
