--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -21,10 +21,12 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: 📦 Install dependencies
+       - name: 📦 Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install gspread oauth2client google-auth
+          pip install gspread oauth2client google-auth playwright
+          python -m playwright install --with-deps
+
 
       - name: 🚀 Run script
         run: python run_all.py  # 🔄 Change to your actual script filename
