--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           python-version: '3.10'
 
-       - name: 📦 Install dependencies
+      - name:  Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install gspread oauth2client google-auth playwright
