--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -2,7 +2,8 @@ name: Run Scrapers Every 5 Minutes
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # every 5 minutes
+    - cron: '0 */2 * * *'  # every 2 hours at minute 0
+ 
   workflow_dispatch:
 
 jobs:
