--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -22,6 +22,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install gspread oauth2client google-auth playwright playwright_stealth
           python -m playwright install --with-deps
+          pip install -r requirements.txt
+          playwright install chromium
 
       - name: 🚀 Run scraping scripts
         run: |
