--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -20,10 +20,11 @@ jobs:
       - name: 📦 Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install gspread oauth2client google-auth playwright playwright_stealth
+          pip install gspread oauth2client google-auth playwright playwright_stealth beautifulsoup4
           python -m playwright install --with-deps
           pip install -r requirements.txt
           playwright install chromium
+
           
       - name: Set up Chrome
         uses: browser-actions/setup-chrome@latest
