--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -16,7 +16,15 @@ jobs:
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v3
-
+      - name: 📤 Upload debug artifacts
+        if: failure()
+        uses: actions/upload-artifact@v3
+        with:
+          name: debug-artifacts
+          path: |
+            debug_screenshot.png
+            debug_page.html
+            
       - name: 📦 Install dependencies
         run: |
           python -m pip install --upgrade pip
