--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -28,6 +28,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install tf-playwright-stealth
           python -m playwright install --with-deps
        
 
