--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -16,18 +16,18 @@ jobs:
       NEW: ${{ secrets.NEW }}
 
     steps:
-      - name: 📥 Checkout code
-        uses: actions/checkout@v3
+      # - name: 📥 Checkout code
+      #   uses: actions/checkout@v3
 
-      - name: 🧪 List files (debug)
-        run: ls -R
+      # - name: 🧪 List files (debug)
+      #   run: ls -R
 
-      - name: 📦 Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install tf-playwright-stealth
-          python -m playwright install --with-deps
+      # - name: 📦 Install dependencies
+      #   run: |
+      #     python -m pip install --upgrade pip
+      #     pip install -r requirements.txt
+      #     pip install tf-playwright-stealth
+      #     python -m playwright install --with-deps
 
       - name: 🚀 Run scraping scripts
         run: |
