--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -22,12 +22,12 @@ jobs:
       - name: 🧪 List files (debug)
         run: ls -R
 
-      # - name: 📦 Install dependencies
-      #   run: |
-      #     python -m pip install --upgrade pip
-      #     pip install -r requirements.txt
-      #     pip install tf-playwright-stealth
-      #     python -m playwright install --with-deps
+      - name: 📦 Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install tf-playwright-stealth
+          python -m playwright install --with-deps
 
       - name: 🚀 Run scraping scripts
         run: |
