--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -31,4 +31,12 @@ jobs:
 
       - name: 🚀 Run scraping scripts
         run: |
-          python run_all.py
+          python monac.py
+
+      - name: 🚀 Run scraping scripts
+        run: |
+          python nse.py
+
+      - name: 🚀 Run scraping scripts
+        run: |
+          python shes.py
