--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -40,3 +40,6 @@ jobs:
       - name: 🚀 Run scraping scripts
         run: |
           python sheshaview.py
+      - name: 🚀 Run scraping scripts
+        run: |
+          python indpe.py
