--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -2,7 +2,7 @@ name: Run Scrapers Every Hour
 
 on:
   schedule:
-    - cron: '0 * * * *'  # ⏰ every hour at minute 0
+    - cron: '0 */5 * * *'  # ⏰ every five hour at minute 0
   workflow_dispatch:
 
 permissions:
