--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -40,3 +40,7 @@ jobs:
       - name: 🚀 Run scraping scripts
         run: |
           python indpe.py
+      - name: 🚀 Run scraping scripts
+        run: |
+          python sentiment.py
+          
